# RRproject

./: .dockerignore  .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yml  main.py  pyproject.toml  report.qmd
.github/workflows/: docker-publish.yml
notebooks/: demo_models.ipynb
src/volatility_forecasting/: __init__.py  data.py  forecasting.py  models.py  plots.py
tests/: verify_report.py
