[project]
name = "rrproject"
version = "0.1.0"
description = "Forecasting Volatility with ARCH and GARCH in Python"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "yfinance>=0.2.40",
    "pandas>=2.2.0",
    "numpy>=1.26.0",
    "arch>=7.0",
    "statsmodels>=0.14.0",
    "matplotlib>=3.8.0",
    "scipy>=1.12.0",
    "ipykernel>=6.0",
    "nbformat>=5.0",
    "nbclient>=0.7",
]

[project.optional-dependencies]
dev = [
    "black>=24.4.0",
    "isort>=5.13.0",
    "flake8>=7.0.0",
    "pre-commit>=3.7.0",
]
